# fast-langgraph

./: .gitignore  API_COMPATIBILITY.md  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.md  COMPLETE_RUST_IMPLEMENTATION.md  CONTRIBUTING.md  CORE_IMPLEMENTATION_COMPLETE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  KEY_CLASSES.md  LANGGRAPH_COMPATIBILITY_COMPLETE.md  LICENSE  MANIFEST.in  PACKAGE_SUMMARY.md  PUBLISHING.md  PYPI_READINESS.md  PYPI_RELEASE_READY.md  PYTHON_INTEGRATION_COMPLETE.md  README.md  ROADMAP.md  RUST_IMPLEMENTATION_HANDOFF.md  SCOPE_COVERAGE.md  TESTING.md  TEST_SUITE_SUMMARY.md  pyproject.toml  setup.py  setup_demo.py
.github/workflows/: ci.yml  compatibility-tests.yml  publish.yml  rust-tests.yml
.langgraph-test/: run_tests.py
benches/: langgraph_benchmark.rs  performance_comparison.rs
docs/: ARCHITECTURE.md  CONCLUSION.md  CONTRIBUTION_ALIGNMENT.md  DEVELOPMENT.md  DOCUMENTATION_INTEGRATION_PLAN.md  EXECUTIVE_SUMMARY.md  FILE_MANIFEST.md  FINAL_ACCOMPLISHMENT_SUMMARY.md  FINAL_CONTRIBUTION_SUMMARY.md  FINAL_PERFORMANCE_ANALYSIS.md  FINAL_PROJECT_SUMMARY.md  FINAL_STATUS_REPORT.md  FINAL_SUMMARY.md  INTEGRATION_PLAN.md  PROJECT_COMPLETION_SUMMARY.md  PR_DESCRIPTION.md  PULL_REQUEST.md  PULL_REQUEST_DESCRIPTION.md  PULL_REQUEST_SUMMARY.md  README.md  RUST_VS_PYTHON_PERFORMANCE.md  SUMMARY.md  USAGE.md  USAGE_GUIDE.md
documentation/docs/: index.md
examples/: README.md  basic.rs  basic_usage.py  monkeypatch_example.py  python_demo.py  python_example.py  simple_test.py  test_monkeypatch.py
fast_langgraph/: __init__.py  accelerator.py  algo_shims.py  cache_decorator.py  checkpoint_wrapper.py  executor_cache.py  optimizations.py  profiler.py  shim.py
langgraph_rs/: __init__.py  shim.py
python/langgraph_rs/: __init__.py  shim.py
python/langgraph_rs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: README.md  benchmark_all_features.py  benchmark_new_features.py  benchmark_optimizations.py  benchmark_rust_channels.py  benchmark_shimming_features.py  compare_performance.py  generate_benchmark_report.py  profile_langgraph.py  simple_comparison.py  test_compatibility.py  test_fast_channels.py
src/: channel_manager.rs  channels.rs  checkpoint.rs  checkpoint_sqlite.rs  conditional.rs  errors.rs  executor.rs  fast_channels.rs  function_cache.rs  graph.rs  hybrid.rs  lib.rs  llm_cache.rs  pregel.rs  pregel_algo.rs  pregel_loop.rs  pregel_node.rs  python.rs  rust_checkpoint.rs  send.rs  state_merge.rs  stream_output.rs
src/core/: channel.rs  edge.rs  executor.rs  mod.rs  node.rs  state.rs
tests/: benchmark_performance.py  python_integration_test.py  python_package_test.py  run_all_tests.py  test_channels.py  test_channels_direct.py  test_function_cache.py  test_integration.py  test_integration_full.py  test_langgraph_compatibility.py  test_llm_cache.py  test_package.py  test_pregel.py  test_profiler.py  test_shim.py  test_sqlite_checkpoint.py  test_state_merge.py
