[package]
name = "fast-langgraph"
version = "0.1.13"
edition = "2021"
description = "High-performance Rust implementation of LangGraph components"
authors = ["Dipankar Sarkar <me@dipankar.name>"]
license = "MIT"
repository = "https://github.com/neul-labs/fast-langgraph"
homepage = "https://github.com/neul-labs/fast-langgraph"
documentation = "https://github.com/neul-labs/fast-langgraph/tree/main/documentation/docs"
readme = "README.md"
keywords = ["langgraph", "rust", "ai", "graph", "performance"]
categories = ["science", "algorithms", "data-structures"]

[lib]
name = "fast_langgraph"
crate-type = ["cdylib", "rlib"]

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["python"]

[[bench]]
name = "langgraph_benchmark"
harness = false

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py37", "multiple-pymethods"], optional = true }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
petgraph = "0.6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
async-trait = "0.1"
rmp-serde = { version = "1.0", optional = true }
flate2 = { version = "1.0", optional = true }
num_cpus = "1.0"
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
zstd = { version = "0.13", optional = true }
lz4 = { version = "1.24", optional = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[features]
default = ["python", "msgpack", "sqlite", "compression-zstd"]
python = ["pyo3"]
msgpack = ["rmp-serde"]
compression = ["flate2"]
compression-zstd = ["zstd"]
compression-lz4 = ["lz4"]
sqlite = ["rusqlite"]
