[build-system]
requires = ["setuptools>=40", "wheel", "setuptools-rust>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-rs"
version = "0.1.0"
description = "High-performance Rust implementation of LangGraph components"
authors = [{name = "LangGraph Team", email = "team@langchain.dev"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "setuptools-rust>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-benchmark>=3.0",
    "criterion>=0.5",
]

[project.urls]
Homepage = "https://github.com/langchain-ai/langgraph"
Repository = "https://github.com/langchain-ai/langgraph"
Documentation = "https://langchain-ai.github.io/langgraph/"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-dir]
"" = "python"

[tool.setuptools_rust]
bindings = "pyo3"
strip = true

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true